修改包结构，重新新建对应的类，处理maven编译错误，很有可能是编码的问题